taplo-lsp/TODO
Does not build:

   Compiling taplo-lsp v0.2.1 (/scratch/devel/taplo-lsp/work/taplo-release-lsp-0.2.6/taplo-lsp)
error[E0599]: no method named `about` found for struct `Arg` in the current scope
  --> taplo-lsp/bin/lsp/main.rs:50:26
   |
50 |                         .about("The address to listen on")
   |                          ^^^^^ method not found in `Arg<'_>`

error[E0599]: no method named `about` found for struct `Arg` in the current scope
  --> taplo-lsp/bin/lsp/main.rs:53:39
   |
53 |                 .arg(Arg::new("port").about("Port to use").default_value("5000")),
   |                                       ^^^^^ method not found in `Arg<'_>`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `taplo-lsp` due to 2 previous errors
*** Error code 101

Stop.

Reported upstream:
https://github.com/tamasfe/taplo/issues/197
